VM/k8s/app.yaml
# app.yaml
apiVersion: apps/v1
kind: Deployment
# A Deployment manages a set of Pods to run an application workload
metadata:
  name: team18-app-v2
  labels:
    app: team18-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team18-app
      version: v2
  template: # all pods will be created from this template
    metadata:
      labels:
        app: team18-app
        version: v2
    spec:
      containers:
        - name: team18-app
          volumeMounts:
            - mountPath: /mnt/app_volume_v2/
              name: app-volume-v2
          image: ghcr.io/remla25-team18/app:0.0.23
          ports:
            - containerPort: 4200
      volumes:
        - name: app-volume-v2
          hostPath:
            path: /mnt/shared/volumes/app_volume_v2/

      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team18-app-v1
  labels:
    app: team18-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team18-app
      version: v1
  template: # all pods will be created from this template
    metadata:
      labels:
        app: team18-app
        version: v1
    spec:
      containers:
        - name: team18-app
          volumeMounts:
            - mountPath: /mnt/app_volume_v1/
              name: app-volume-v1
          image: ghcr.io/remla25-team18/app:0.0.25
          ports:
            - containerPort: 4200
      volumes:
        - name: app-volume-v1
          hostPath:
            path: /mnt/shared/volumes/app_volume_v1/

      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: team18-app
  labels:
    app: team18-app
spec:
  selector:
    app: team18-app
  ports:
    - name: metrics
      protocol: TCP
      port: 80
      targetPort: 4200
