VM/k8s/model.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team18-model-service
  labels:
    app: team18-model-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team18-model-service
  template:
    metadata:
      labels:
        app: team18-model-service
    spec:
      containers:
        - name: team18-model-service
          imagePullPolicy: Always
          image: ghcr.io/remla25-team18/model-service:1.0.3
          ports:
            - containerPort: 5050
      imagePullSecrets:
        - name: ghcr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: team18-model-service
spec:
  type: ClusterIP
  ports:
    - port: 5050
      targetPort: 5050
  selector:
    app: team18-model-service
