VM/k8s/istio-ingress.yml
#istio-ingress.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata: { name: team }
spec:
  selector: { istio: ingressgateway }
  servers:
  - port: { number: 80, name: http, protocol: HTTP }
    hosts: [ "*" ]
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata: { name: my-entry-service }
spec:
  gateways: [ my-gateway ]
  hosts: [ "*" ]
  http:
    - match:
      - uri: { prefix: / }
      route:
      - destination: { host: app }
